--- a/index.html
+++ b/index.html
@@ -31,8 +31,22 @@
       font-display: swap;
     }
     @font-face {
-      font-family: 'Bazaar';
+      font-family: 'Baazar';
+      src: url('./BaazarRegular.ttf') format('truetype');
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'Baazar';
       src: url('./BaazarBold.ttf') format('truetype');
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'Baazar';
+      src: url('./BaazarBlack.ttf') format('truetype');
       font-weight: 900;
       font-style: normal;
       font-display: swap;
